src/test/ui/span/send-is-not-static-std-sync-2.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/send-is-not-static-std-sync-2.rs:21:21
   |
21 |         Mutex::new(&x)
   |                     ^ borrowed value does not live long enough
22 |     };
   |     - `x` dropped here while still borrowed
...
26 | }
   | - borrowed value needs to live until here

error[E0597]: `x` does not live long enough
  --> $DIR/send-is-not-static-std-sync-2.rs:31:22
   |
31 |         RwLock::new(&x)
   |                      ^ borrowed value does not live long enough
32 |     };
   |     - `x` dropped here while still borrowed
...
35 | }
   | - borrowed value needs to live until here

error[E0597]: `x` does not live long enough
  --> $DIR/send-is-not-static-std-sync-2.rs:41:26
   |
41 |         let _ = tx.send(&x);
   |                          ^ borrowed value does not live long enough
42 |         (tx, rx)
43 |     };
   |     - `x` dropped here while still borrowed
...
47 | }
   | - borrowed value needs to live until here

error: aborting due to 3 previous errors

